Import of YANICK/Email-Simple-Markdown-0.2.0 from CPAN.
gitpan-cpan-distribution: Email-Simple-Markdown
gitpan-cpan-version:      0.2.0
gitpan-cpan-path:         YANICK/Email-Simple-Markdown-0.2.0.tar.gz
gitpan-cpan-author:       YANICK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Email-Simple-Markdown
 
+0.2.0 2012-05-21
+ - [BUG FIXES] - Add Email::MIME to the dependency list.
+
 0.1.0 2012-05-16
  - First version, unleashed on an unsuspecting world.
 
