--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Email-Simple-Markdown
 
+0.3.0 2012-05-21
+ - FEATURES ] - Add possibility to add a cascading stylesheet to the html
+   part. - Add pre-markdown convertion filter. - Add choice of markdown
+   engine (Text::Markdown or Text::MultiMarkdown)
+
 0.2.0 2012-05-21
  - [BUG FIXES] - Add Email::MIME to the dependency list.
 
