--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Email-Simple-Markdown
 
+0.3.1 2012-05-22
+ [BUG FIXES]
+ - Add Text::MultiMarkdown to the dependency list.
+
 0.3.0 2012-05-21
- - FEATURES ] - Add possibility to add a cascading stylesheet to the html
+ - [FEATURES] - Add possibility to add a cascading stylesheet to the html
    part. - Add pre-markdown convertion filter. - Add choice of markdown
    engine (Text::Markdown or Text::MultiMarkdown)
 
