Import of YANICK/Email-Simple-Markdown-0.4.0 from CPAN.
gitpan-cpan-distribution: Email-Simple-Markdown
gitpan-cpan-version:      0.4.0
gitpan-cpan-path:         YANICK/Email-Simple-Markdown-0.4.0.tar.gz
gitpan-cpan-author:       YANICK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Email-Simple-Markdown
 
+0.4.0 2012-05-28
+ - code churn: 1 files changed, 2 insertions(+), 0 deletions(-)
+
+ [BUG FIXES]
+ - <style>, not <css>.
+
+ [ENHANCEMENTS]
+ - css can now be passed as an array ref.
+
 0.3.1 2012-05-22
  [BUG FIXES]
  - Add Text::MultiMarkdown to the dependency list.
