--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     multipart body
 
 VERSION
-    version 0.3.1
+    version 0.4.0
 
 SYNOPSIS
         use Email::Simple::Markdown;
@@ -68,6 +68,15 @@ METHODS
             p   { color: red; }
             pre { border-style: dotted; }
         END_CSS
+
+    The *$stylesheet* can also be an array ref, holding key/value pairs
+    where the key is the css selector and the value the attached style. For
+    example, the equivalent call to the one given above would be:
+
+        $email->css_set([
+            p   => 'color: red;',
+            pre => 'border-style: dotted;',
+        ]);
 
   pre_markdown_filter_set( sub{ ... } );
     Sets a filter to be run on the body before the markdown transformation
