--- a/Changes
+++ b/Changes
@@ -1,8 +1,14 @@
 Revision history for Email-Simple-Markdown
 
-0.4.0 2012-05-28
- - code churn: 1 files changed, 2 insertions(+), 0 deletions(-)
+0.5.0 2012-07-10
+ [ENHANCEMENTS]
+ - charset can be specified for email content.	   (patch by Alessandro
+   Ranellucci, issue#4)
 
+ [STATISTICS]
+ - code churn: 4 files changed, 50 insertions(+), 10 deletions(-)
+
+0.4.0 2012-05-28
  [BUG FIXES]
  - <style>, not <css>.
 
@@ -14,12 +20,14 @@ Revision history for Email-Simple-Markdown
  - Add Text::MultiMarkdown to the dependency list.
 
 0.3.0 2012-05-21
- - [FEATURES] - Add possibility to add a cascading stylesheet to the html
-   part. - Add pre-markdown convertion filter. - Add choice of markdown
-   engine (Text::Markdown or Text::MultiMarkdown)
+ [FEATURES]
+ - Add possibility to add a cascading stylesheet to the html part.
+ - Add pre-markdown convertion filter.
+ - Add choice of markdown engine (Text::Markdown or Text::MultiMarkdown)
 
 0.2.0 2012-05-21
- - [BUG FIXES] - Add Email::MIME to the dependency list.
+ [BUG FIXES]
+ - Add Email::MIME to the dependency list.
 
 0.1.0 2012-05-16
  - First version, unleashed on an unsuspecting world.
