--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Email-Simple-Markdown
 
+0.5.2 2013-09-25
+ [BUG FIXES]
+ - Dist::Zilla::Plugin::Test::Compile was causing test to potentially hang
+   on Windows. (reported by Karen Etheridge)
+
+ [STATISTICS]
+ - code churn: 4 files changed, 61 insertions(+), 14 deletions(-)
+
 0.5.1 2013-09-18
  [BUG FIXES]
  - Small fix for charset failing in constructor. (GH#5, gavincarr)
@@ -9,8 +17,8 @@ Revision history for Email-Simple-Markdown
 
 0.5.0 2012-07-10
  [ENHANCEMENTS]
- - charset can be specified for email content.	      (patch by Alessandro
-   Ranellucci, issue#4)
+ - charset can be specified for email content.		    (patch by
+   Alessandro Ranellucci, issue#4)
 
  [STATISTICS]
  - code churn: 4 files changed, 50 insertions(+), 10 deletions(-)
