Import of YANICK/Email-Simple-Markdown-0.5.3.tar.gz from CPAN.
gitpan-cpan-distribution: Email-Simple-Markdown
gitpan-cpan-version:      0.5.3
gitpan-cpan-path:         YANICK/Email-Simple-Markdown-0.5.3.tar.gz
gitpan-cpan-author:       YANICK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Email-Simple-Markdown
 
+0.5.3 2014-11-21
+ [BUG FIXES]
+ - Wrong use of 'or' with return. (Roy Tate)
+
+ [STATISTICS]
+ - code churn: 6 files changed, 76 insertions(+), 17 deletions(-)
+
 0.5.2 2013-09-25
  [BUG FIXES]
  - Dist::Zilla::Plugin::Test::Compile was causing test to potentially hang
@@ -17,7 +24,7 @@ Revision history for Email-Simple-Markdown
 
 0.5.0 2012-07-10
  [ENHANCEMENTS]
- - charset can be specified for email content.		    (patch by
+ - charset can be specified for email content.			  (patch by
    Alessandro Ranellucci, issue#4)
 
  [STATISTICS]
